--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,10 +5,11 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.0.4",
-    "com.unity.ide.visualstudio": "1.0.5",
-    "com.unity.ide.vscode": "1.0.4",
+    "com.unity.ide.visualstudio": "1.0.11",
+    "com.unity.ide.vscode": "1.0.7",
     "com.unity.package-manager-ui": "2.2.0",
     "com.unity.purchasing": "2.0.6",
+    "com.unity.render-pipelines.lightweight": "5.2.3",
     "com.unity.test-framework": "1.0.12",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.timeline": "1.0.0",
